Removed duplicate import statement and fixed spacing issue

--- a/src/SearchResult.css
+++ b/src/SearchResult.css
@@ -1,4 +1,5 @@
 .result-row {
 	width: 60%;
 	height: 100%;
+	margin-left: 240px;
 }
